--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>JustFuck(inspired by Brainfuck)</h1>
+        <h1>JustFxxk(inspired by Brainfuck)</h1>
     </div>
     <div class="container">
         <div class="right">
